# GardenRule

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-07-15-rulegarden-mvp.md
examples/high-risk-warning/: run.py
examples/repeated-correction/: run.py
examples/rule-demotion/: run.py
examples/rule-promotion/: run.py
examples/undo-transaction/: run.py
plugins/rulegarden/: .mcp.json
plugins/rulegarden/.codex-plugin/: plugin.json
plugins/rulegarden/hooks/: hooks.json
plugins/rulegarden/skills/rulegarden/: SKILL.md
src/rulegarden/: __init__.py  app.py  cli.py  models.py
src/rulegarden/agents_md/: __init__.py  managed_block.py
src/rulegarden/git/: __init__.py  isolated_commit.py
src/rulegarden/hooks/: __init__.py  cli.py  common.py  post_tool_use.py  pre_tool_use.py  session_start.py  stop.py  user_prompt_submit.py
src/rulegarden/mcp/: __init__.py  server.py
src/rulegarden/rules/: __init__.py  lifecycle.py  selector.py
src/rulegarden/storage/: __init__.py  repository.py
src/rulegarden/transactions/: __init__.py  service.py
tests/: conftest.py  test_cli.py  test_plugin_bundle.py
tests/fixtures/: agents_with_user_content.md
tests/integration/: test_application.py  test_examples.py  test_hooks.py  test_isolated_commit.py  test_mcp_workflow.py  test_transactions.py
tests/unit/: test_lifecycle.py  test_managed_block.py  test_models.py  test_repository.py  test_selector.py
