[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rulegarden"
version = "0.1.0"
description = "Project-level rule lifecycle tooling for Codex"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.28,<2",
  "pydantic>=2.13,<3",
  "PyYAML>=6.0,<7",
]

[project.scripts]
rulegarden = "rulegarden.cli:main"
rulegarden-hook = "rulegarden.hooks.cli:main"
rulegarden-mcp = "rulegarden.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
